// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableObject /> Default story renders snapshot 1`] = `
<div
  class="table-object"
>
  <div
    class="table-object__header"
  >
    <div
      class="toolbar"
    >
      <div
        class="toolbar__item"
      >
        <h2
          class="heading heading--size-h3"
        >
          Checkpoint Progress
        </h2>
      </div>
      <div
        class="toolbar__item toolbar__item--align-right"
      >
        <button
          class="clickable-style clickable-style--md clickable-style--secondary clickable-style--brand button button--secondary"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.375rem"
            style="--icon-size: 1.375rem;"
            width="1.375rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#filter-list"
            />
          </svg>
          Filters
        </button>
      </div>
    </div>
  </div>
  <div
    class="table-object__body"
  >
    <div
      class="table-object__body-inner"
    >
      <table
        class="table"
      >
        <caption
          class="table__caption u-is-vishidden"
        >
          This is a table caption and it is required
        </caption>
        <thead
          class="table__header"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<TableObject /> Overflow story renders snapshot 1`] = `
<div
  class="table-object"
>
  <div
    class="table-object__header"
  >
    <div
      class="toolbar"
    >
      <div
        class="toolbar__item"
      >
        <h2
          class="heading heading--size-h3"
        >
          Checkpoint Progress
        </h2>
      </div>
      <div
        class="toolbar__item toolbar__item--align-right"
      >
        <button
          class="clickable-style clickable-style--md clickable-style--secondary clickable-style--brand button button--secondary"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.375rem"
            style="--icon-size: 1.375rem;"
            width="1.375rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#filter-list"
            />
          </svg>
          Filters
        </button>
      </div>
    </div>
  </div>
  <div
    class="table-object__body"
  >
    <div
      class="table-object__body-inner"
    >
      <table
        class="table"
      >
        <caption
          class="table__caption u-is-vishidden"
        >
          This is a table caption and it is required
        </caption>
        <thead
          class="table__header"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Table heading
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<TableObject /> Sortable story renders snapshot 1`] = `
<div
  class="table-object"
>
  <div
    class="table-object__header"
  >
    <div
      class="toolbar"
    >
      <div
        class="toolbar__item"
      >
        <h2
          class="heading heading--size-h3"
        >
          Checkpoint Progress
        </h2>
      </div>
      <div
        class="toolbar__item toolbar__item--align-right"
      >
        <button
          class="clickable-style clickable-style--md clickable-style--secondary clickable-style--brand button button--secondary"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.375rem"
            style="--icon-size: 1.375rem;"
            width="1.375rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#filter-list"
            />
          </svg>
          Filters
        </button>
      </div>
    </div>
  </div>
  <div
    class="table-object__body"
  >
    <div
      class="table-object__body-inner"
    >
      <table
        class="table"
      >
        <caption
          class="table__caption u-is-vishidden"
        >
          This is a table caption and it is required
        </caption>
        <thead
          class="table__header"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell"
            >
              <button
                class="table__header-cell-button"
              >
                Sortable
                <div
                  class="table__header-cell-sort"
                >
                  <svg
                    class="icon"
                    fill="currentColor"
                    height="1rem"
                    role="img"
                    style="--icon-size: 1rem;"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="4"
                    >
                      Sort
                    </title>
                    <use
                      xlink:href="test-file-stub#unfold-more"
                    />
                  </svg>
                </div>
              </button>
            </th>
            <th
              class="table__header-cell"
            >
              <div
                class="table__header-cell-contents"
              >
                Not sortable
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
          <tr
            class="table__row"
          >
            <td
              class="table__cell"
            >
              Value
            </td>
            <td
              class="table__cell"
            >
              Value
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
